--- a/Asp_Web_Learning/GamedevStorage/Views/Home/ListResponses.cshtml
+++ b/Asp_Web_Learning/GamedevStorage/Views/Home/ListResponses.cshtml
@@ -9,27 +9,31 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Responses</title>
+    <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
 </head>
 <body>
-    <h2>Here is the list of people attendig the party</h2>
-    <table>
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Email</th>
-                <th>Phone</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach(GamedevStorage.Models.GuestResponse r in Model)
-            {
-            <tr>
-                <td>@r.Name</td>
-                <td>@r.Email</td>
-                <td>@r.Phone</td>
-            </tr>
-            }
-        </tbody>
-    </table>
+    <div class="panel-body p-2">
+        <h2>Here is the list of people attendig the party</h2>
+        <table class="table table-sm table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Phone</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (GamedevStorage.Models.GuestResponse r in Model)
+                {
+                    <tr>
+                        <td>@r.Name</td>
+                        <td>@r.Email</td>
+                        <td>@r.Phone</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+
+    </div>
 </body>
 </html> 
