--- a/Asp_Web_Learning/GamedevStorage/Views/Home/Thanks.cshtml
+++ b/Asp_Web_Learning/GamedevStorage/Views/Home/Thanks.cshtml
@@ -9,18 +9,21 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Thanks</title>
+    <link href="~/css/styles.css" rel="stylesheet" />
+    <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
 </head>
-<body>
-    <p>
+<body class="text-center">
+    <div>
         <h1>Thank you, @Model.Name!</h1>
         @if (Model.WillAttend == true)
         {
             @:It`s great that you`re coming. The drinks are already in the fridge!
-        } else
+        }
+        else
         {
             @:Sorry to hear that you can`t make it, but thanks for letting us know.
         }
-    </p>
-    <p>Click <a asp-action="ListResponses">here</a> to see who is coming</p>
+    </div>
+        Click<a class="nav-link d-inline p-1" asp-action="ListResponses">here</a>to see who is coming
 </body>
 </html>
